# gRPC_simple_test

./: docker-compose.yml  log_commands
client/client/: Dockerfile  pyproject.toml  users_pb2.py  users_pb2_grpc.py
client/client/client/: app.py
client/client/client/protos/: users.proto
server/server/: Dockerfile  pyproject.toml  users_pb2.pyi
server/server/server/: app.py
